Fix z-index to make links and button in selected plane dialog accessible.

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -22,7 +22,7 @@ html, body {
     background: #ffffff;
     box-shadow: 4px 4px 10px #444444;
     cursor: pointer;
-    z-index: 9999;
+    z-index: 95;
 }
 
 #map_container {
